# loongson

./: README.md
1C102_1/drivers/private/ls1c102/: ls1c102_ptimer.c
1C102_1/user/ls1c102/: 1c102_Interrupt.c  1c102_main.c  Motor.c  Motor.h  oledfont.h
1C102_2/drivers/private/ls1c102/: ls1c102_i2c.h  ls1c102_interrupt.h  ls1c102_ptimer.c  ls1c102_ptimer.h
1C102_2/drivers/public/: ls1x_spi.h  ls1x_uart.c  ls1x_uart.h
1C102_2/src/: HX711.c  HX711.h  led.c  led.h
1C102_2/system/: init.c
1C102_2/user/ls1c102/: 1c102_Interrupt.c  1c102_main.c  Motor.c  Servo.c  Servo.h  oledfont.h
DEngine_2k1000LA/: .cap_yolov5_hand.py.un~  .mobilenet-face.py.un~  .pic_yolov5_shape.py.un~  .test_char.py.un~  run.sh  usbprop.ini
DEngine_2k1000LA/DEngine/: .pic_yolov5_rubbish.py.un~  .run.sh.un~  .test_cnn.py.un~  env.sh  usbprop.ini
DEngine_2k1000LA/DEngine/data/1080p/: 1080p.h264  track2.nv12.yuv
DEngine_2k1000LA/DEngine/data/image_test/: track1_crop0_836x914.nv12.yuv  yuv.py
DEngine_2k1000LA/DEngine/desdk/cpp/: .CMakeLists.txt.un~  .build.sh.un~  .build_device.sh.un~  CMakeLists.txt  build.sh
DEngine_2k1000LA/DEngine/desdk/cpp/example/kcf_proc/: CMakeLists.txt
DEngine_2k1000LA/DEngine/desdk/cpp/example/kcf_proc/dev/src/: kcf_proc_dev.cc
DEngine_2k1000LA/DEngine/desdk/cpp/example/kcf_proc/host/src/: kcf_proc_host.cc
DEngine_2k1000LA/DEngine/desdk/cpp/example/nodebase/: CMakeLists.txt
DEngine_2k1000LA/DEngine/desdk/cpp/example/nodebase/comm/: download.cc  toolbox.cc
DEngine_2k1000LA/DEngine/desdk/cpp/example/nodebase/dev/tracksync/: track_sync.cc  track_sync.h
DEngine_2k1000LA/DEngine/desdk/cpp/example/nodebase/dev/yolov3/: arctern_utils.cc  obj_yolov3_det.cc  obj_yolov3_det.h  yolo_det.cc  yolo_det.h  yolov3_post_proc.cc  yolov3_post_proc.h
DEngine_2k1000LA/DEngine/desdk/cpp/example/nodebase/inc/: de_arctern_node.h  de_arctern_utils.h  download.h  toolbox.h
DEngine_2k1000LA/DEngine/desdk/cpp/include/: de_api.h  de_base_api.h  de_cv_api.h  de_dcmi_api.h  de_errorcode.h  de_graph_api.h  de_infer_engine.h  de_model_api.h  de_profiler_api.h
DEngine_2k1000LA/DEngine/desdk/cpp/include/core/: de_base.h  de_c_type.h  de_config.h  de_logging.h  de_module.h  de_ndarray.h  de_node.h  de_packed_func.h  de_prop.h  de_registry.h  de_serializer.h  de_system_init.h  de_task_serialize.h  de_thread.h
DEngine_2k1000LA/DEngine/desdk/cpp/include/hal/: hal_memory.h  hal_mm_jpeg.h
DEngine_2k1000LA/DEngine/desdk/cpp/include/node/: de_aiengine_ext_node.h  de_aiengine_node.h  de_file_in_node.h  de_node_common.h  de_pic_decoder_node.h  de_pic_encoder_node.h  de_video_decoder_node.h  de_video_in_node.h
DEngine_2k1000LA/DEngine/desdk/cpp/infer_engine/: CMakeLists.txt  build.sh  infer_engine_common.h  infer_engine_dev.cc  infer_engine_host.cc  receiver_dev.h  receiver_host.h  sender_dev.h  sender_host.h
DEngine_2k1000LA/DEngine/desdk/python/: infer_engine.py
DEngine_2k1000LA/DEngine/desdk/python/common/: funcs.py  resize.py  similarity.py  types.py
DEngine_2k1000LA/DEngine/desdk/python/de/: __init__.py  api.py  arith.py  attrs.py  codegen.py  datatype.py  error.py  expr.py  intrin.py  ir_builder.py  ir_pass.py  make.py  module.py  ndarray.py  net_bin_analys.py  schedule.py  tensor.py
DEngine_2k1000LA/DEngine/desdk/python/de/_ffi/: .base.py.un~  base.py  base.py~  function.py  libinfo.py  ndarray.py  node.py  runtime_ctypes.py
DEngine_2k1000LA/DEngine/desdk/python/de/_ffi/_ctypes/: function.py  ndarray.py  node.py  types.py
DEngine_2k1000LA/DEngine/desdk/python/de/_ffi/_cython/: base.pxi  function.pxi  ndarray.pxi
DEngine_2k1000LA/DEngine/desdk/python/de/contrib/: graph_runtime.py  nnpack.py  peak.py  random.py  sparse.py
DEngine_2k1000LA/DEngine/desdk/python/de/contrib/debugger/: debug_runtime.py
DEngine_2k1000LA/DEngine/desdk/python/de/rpc/: __init__.py  base.py  client.py
DEngine_2k1000LA/DEngine/desdk/python/example/: SingleShotDetection.py  cap_emo.py  cap_yolov5_hand.py  cap_yolov5_hand.py~  cap_yolov5_mask.py  mobilenet-face.py  model_run.py  model_run_old.py  onchip_run.py  pic_yolov5_rubbish.py  pic_yolov5_rubbish.py~  pic_yolov5_shape.py  pic_yolov5_shape.py~  similarity.py  test_char.py  test_char.py~  test_cnn.py  test_cnn.py~  test_yolov3.py
DEngine_2k1000LA/DEngine/desdk/python/example/acctest/: acctest_caffe_mobilenet-v2.py  acctest_caffe_resnet50.py  acctest_caffe_squeezenet.py  acctest_caffe_yolov3.py
DEngine_2k1000LA/DEngine/desdk/python/example/acctest/dataset/: ILSVRC2012.py  PTB.py  camvid.py  coco2014.py  coco2017.py  voc2007.py  voc2012.py
DEngine_2k1000LA/DEngine/desdk/python/example/utils/: inference.py  yolov5.py
DEngine_2k1000LA/DEngine/desdk/python/nn/: __init__.py  nn_deploy.py  nn_profile.py
DEngine_2k1000LA/DEngine/desdk/python/user_struct/: __init__.py  alg_cmp_struct.py  basic_struct.py  cv_struct.py  face_struct.py  nn_time_struct.py  p2p_struct.py  pic_struct_config.py  pod_struct.py  tvm_ve_jpeg_struct.py  video_struct_config.py
DEngine_2k1000LA/DEngine/model/caffe_yolov3_416/: caffe_yolov3_416.ini
DEngine_2k1000LA/DEngine/rubbish/: classes.txt
DEngine_2k1000LA/DEngine/shape/: classes.txt
DEngine_2k1000LA/DEngine/tools/: reboot.sh  usbprop.sh
LONGXIN/: logwidget.h  mainwindow.cpp  signup.h
QT/: LONGXIN.pro  images.qrc  logwidget.cpp  logwidget.ui  mainwindow.h  mainwindow.ui  new_ai_qt.py  qcustomplot.cpp  readme  signup.cpp  signup.ui
loongson-camera-kernel/: boot.cfg  ls2k.dtb
opencv/: HSV.txt  main.py  main2.py  mask.py
serial/: baikerongchuang3.py
